# waview

./: .prettierrc.json  LICENSE  README.md  bun.lockb  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
.husky/: pre-commit
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  file.rs  lib.rs  main.rs  menu.rs  model.rs  utils.rs
src/@types/: context.ts  model.ts  view.ts
src/components/Chart/: ChartConfig.tsx  ToolMenu.tsx  ToolSet.tsx  WaveformConfig.tsx  index.tsx
src/components/Drawer/: FileItem.tsx  index.tsx
src/components/Home/: Main.tsx  index.tsx
src/components/Modal/: index.tsx
src/components/Preference/: index.tsx
src/components/Search/: index.tsx
src/locales/: resources.ts  zh.json
src/pages/: constants.ts  index.tsx
src/pages/Home/: index.tsx
src/pages/Home/Chart/: index.tsx
src/pages/Home/Chart/components/: ChartConfig.tsx  ToolMenu.tsx  ToolSet.tsx  WaveformConfig.tsx
src/pages/Home/utils/: index.ts
src/pages/components/ClearInput/: index.tsx
src/pages/components/CustomDialog/: index.tsx
src/pages/components/Drawer/: FileItem.tsx  index.tsx
src/pages/components/Preference/: index.tsx
src/stores/: Action.tsx  Model.tsx  ModelContext.tsx  ModelReducer.ts  View.tsx  ViewContext.tsx  ViewReducer.ts
src/types/: model.ts
src/utils/: index.ts
