[package]
name = "waview"
version = "0.1.0"
description = "A Tauri App"
authors = ["suous"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "path-all", "fs-write-file"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1.0.33"
csv = "1.3.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "z" # Optimize for binary size
strip = true  # Automatically strip symbols from the binary.
